; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_startup.c_processor_start_thread.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_startup.c_processor_start_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@idle_thread = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @processor_start_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = call %struct.TYPE_3__* (...) @current_processor()
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %3, align 8
  %6 = call i64 (...) @current_thread()
  store i64 %6, i64* %4, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @slave_machine_init(i8* %7)
  %9 = load i64, i64* %4, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp eq i64 %9, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %1
  %15 = load i64, i64* @idle_thread, align 8
  %16 = trunc i64 %15 to i32
  %17 = call i32 @thread_block(i32 %16)
  br label %18

18:                                               ; preds = %14, %1
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @thread_terminate(i64 %19)
  ret void
}

declare dso_local %struct.TYPE_3__* @current_processor(...) #1

declare dso_local i64 @current_thread(...) #1

declare dso_local i32 @slave_machine_init(i8*) #1

declare dso_local i32 @thread_block(i32) #1

declare dso_local i32 @thread_terminate(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
